<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondFragment"
    android:id="@+id/fragment_second">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/second_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/toolbar"
        >
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/second_fragment_back"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ></ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/second_fragment_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/grey"
            >

            <TextView
                android:id="@+id/table_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/table_position"
                android:textStyle="bold"
                android:textColor="@color/black"
                ></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/table_position"
                app:layout_constraintEnd_toStartOf="@+id/table_games"
                android:text="@string/table_team"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                ></TextView>

            <TextView
                android:id="@+id/table_games"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/table_win"
                android:text="@string/table_games"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                ></TextView>

            <TextView
                android:id="@+id/table_win"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/table_draw"
                android:text="@string/table_win"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                ></TextView>

            <TextView
                android:id="@+id/table_draw"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/table_lose"
                android:text="@string/table_draw"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                ></TextView>

            <TextView
                android:id="@+id/table_lose"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/table_points"
                android:text="@string/table_lose"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                ></TextView>

            <TextView
                android:id="@+id/table_points"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/table_points"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                ></TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/second_fragment_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            ></androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>